--- a/Game Of Life/style.css
+++ b/Game Of Life/style.css
@@ -5,6 +5,7 @@ body {
 .cell {
     height: 10px;
     width: 10px;
+    border: 1px solid black;
 }
 .alive {
     background-color: rgb(255, 80, 80);
