--- a/Game Of Life/style.css
+++ b/Game Of Life/style.css
@@ -2,6 +2,10 @@ body {
     background-color: rgb(92, 92, 92);
 }
 
+h2 {
+    font-size: smaller;
+}
+
 .cell {
     height: 10px;
     width: 10px;
